# changes

./: .bumpversion.cfg  .changes.toml  .coveragerc  .env  .envrc  .gitignore  .mergify.yml  .pre-commit-config.yaml  .python-version  .pyup.yml  .readthedocs.yml  .scrutinizer.yml  .travis.yml  404.html  AUTHORS.md  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  TODO.md  appveyor.yml  circle.yml  cobertura.xml  index.html  junit.xml  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml  tox.ini  tox_appveyor.ini
.circleci/: config.yml
.github/workflows/: codeql-analysis.yml  main.yml  tests.yml
_snippets/: index.html
_snippets/shoulders/: index.html
api/changes/: attributes.html  changelog.html  cli.html  compat.html  config.html  exceptions.html  flow.html  index.html  packaging.html  probe.html  prompt.html  services.html  shell.html  util.html  vcs.html  venv.html  verification.html  version.html
api/changes/commands/: index.html  publish.html  stage.html  status.html
api/changes/models/: index.html  repository.html
changes/: __init__.py  __main__.py  attributes.py  changelog.py  cli.py  compat.py  config.py  exceptions.py  flow.py  github.py  models.py  packaging.py  pandoc.py  probe.py  prompt.py  services.py  shell.py  testing.py  util.py  vcs.py  venv.py  verification.py  version.py
changes/commands/: __init__.py  init.py  publish.py  stage.py  status.py
changes/models/: __init__.py  repository.py
changes/templates/: release_notes_template.md
coverage_html/: changes___init___py.html  changes___main___py.html  changes_attributes_py.html  changes_changelog_py.html  changes_cli_py.html  changes_commands___init___py.html  changes_commands_publish_py.html  changes_commands_stage_py.html  changes_commands_status_py.html  changes_compat_py.html  changes_config_py.html  changes_exceptions_py.html  changes_flow_py.html  changes_models___init___py.html  changes_models_repository_py.html  changes_packaging_py.html  changes_probe_py.html  changes_prompt_py.html  changes_services_py.html  changes_shell_py.html  changes_util_py.html  changes_vcs_py.html  changes_venv_py.html  changes_verification_py.html  changes_version_py.html  index.html  status.json
design/: index.html
docs/: Makefile  conf.py  design.md  index.md  index.rst  media  tests.md
docs/_snippets/: badges.md  shoulders.md
requirements/: appveyor.txt  dev.txt  runtime.txt
search/: search_index.json
tests/: __init__.py  conftest.py  index.html  test_attributes.py  test_changelog.py  test_changes.py  test_cli.py  test_config.py  test_init.py  test_packaging.py  test_probe.py  test_publish.py  test_repository.py  test_shell.py  test_stage.py  test_status.py  test_testing.py  test_util.py  test_vcs.py  test_version.py
